WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260391
[macOS Monterey] Remote list updates for link decoration filtering fail in Safari 17
https://bugs.webkit.org/show_bug.cgi?id=260391
Summary
[macOS Monterey] Remote list updates for link decoration filtering fail in Sa...
Wenson Hsieh
Reported
2023-08-18 09:44:36 PDT
rdar://114047664
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-08-18 10:30:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16836
EWS
Comment 2
2023-08-18 12:37:03 PDT
Committed
267051@main
(ccf8724c8c34): <
https://commits.webkit.org/267051@main
> Reviewed commits have been landed. Closing PR #16836 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug